--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
     <title>Conecta 4</title>
   </head>
   <body>
     <h1>Conecta 4</h1>
+    <a href="http://google.com"> <i class="fas fa-power-off"></i> </a>
+    <a href="/"> <i class="fas fa-recycle"></i> </a>
+
+    <h2>Es el turno de las ROJAS</h2>
     <div id="root">
       <div id="chip-selector"></div>
       <div id="board"></div>
