--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </div>
     </div>
     <script src="./lib/jquery-3.3.1.js"></script>
+    <script src="./Board.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
