--- a/index.html
+++ b/index.html
@@ -4,21 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Conecta 4</title>
   </head>
   <body>
     <h1>Conecta 4</h1>
     <a href="http://google.com"> <i class="fas fa-power-off"></i> </a>
     <a href="/"> <i class="fas fa-recycle"></i> </a>
-    <h2>Es el turno de las ROJAS</h2>
+    <div id="welcome">
+      <div id="welcome-card"><h2>Bienvenido a Conecta 4</h2></div>
+      <p>
+        Conecta 4 es un divertido juego de "mesa" que consiste en intentar poner
+        4 fichas de tu color en línea o diagonal.
+      </p>
+      <p>Pueden jugar 2 personas o tu sólo contra la máquina.</p>
+      <div id="welcome-buttons">
+        <button onclick="begin(2)">Modo 2 personas</button>
+        <button onclick="begin(1)">Modo 1 persona vs máquina</button>
+        <button onclick="begin(0)">Modo máquina vs máquina</button>
+      </div>
+    </div>
     <div id="root">
+      <h2 id="turn-title">Es el turno de las ROJAS</h2>
       <div id="chip-selector"></div>
       <div id="board">
         <svg id="board-svg" xmlns="http://www.w3.org/2000/svg">
